--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     .right-bar {margin-left:200px; padding-top:150px;}
     .header {position:fixed; left:200px; top:0px; right:0px; height:150px; border:2px solid blue; background:#eeeeee;}
     .content {height:1000px;} /*replace with height:auto; for real content*/
-    .footer {height:40px; border-top:2px solid green; background:#eeeeee;}
+    .footer {height:40px; border-top:2px solid green; background:#eeeeee; padding:10px}
 </style>
   </BODY>
 </HTML>
