--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     .page {position:relative;}
     .left-bar {position:absolute; left:0px; width:200px; height:100%; border-right:2px solid red;}
     .right-bar {margin-left:200px; padding-top:150px;}
-    .header {position:fixed; left:200px; top:0px; right:0px; height:150px; border:2px solid blue; background:#eeeeee;}
+    .header {position:fixed; left:200px; top:0px; right:0px; height:150px; border:2px solid blue; background:#eeeeee; padding:50px}
     .content {height:1000px;} /*replace with height:auto; for real content*/
     .footer {height:40px; border-top:2px solid green; background:#eeeeee; padding:10px}
 </style>
